2002-03-11  Jody Goldberg <jody@gnome.org>

	* src/gui-util.c (color_combo_get_style_color) : changes to color combo.
	* src/sheet-object-graphic.c (cb_fill_color_changed) : ditto.
	* src/workbook-format-toolbar.c (cb_fore_color_changed) : ditto.
	(cb_back_color_changed) : ditto.
	(workbook_create_format_toolbar) : ditto.

2002-03-10  Jody Goldberg <jody@gnome.org>

	* configure.in : bump gal req to pull in the colour combo changes.

2002-03-10  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-03-10  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.c (command_undo_sheet_delete) new utility function (for 
	  CMD_ANALYSIS_TOOL_TYPE and CMD_SHEET_REORGANIZE_TYPE)
	(CMD_ANALYSIS_TOOL) : undo/redo command for data analysis tools.
	* src/commands.h (cmd_analysis_tool) : new

2002-03-10  Jody Goldberg <jody@gnome.org>

	* src/tools/solver/reports.c : warning suppression
	* src/tools/solver/solver.c (lp_solver_init) : ditto.

	* configure.in : bump gal version req.

2002-03-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/gnm-marshalers.list : add NONE:STRING

2002-03-10  Jon K Hellan  <hellan@acm.org>

	* src/func.c (copy_hash_table_to_ptr_array): Check if function is
	FUNCTION_NAMEONLY here.
	(function_dump_defs): So that we can use the earlier version of this.

2002-03-09  Jon K Hellan  <hellan@acm.org>

	Dump function definitions from plugins, this time the easy way
	which even works.
	
	* src/func.c (copy_hash_table_to_ptr_array): Copy also when fd->help
	is NULL.
	(function_dump_defs): Load function definition before dumping name
	only function.

	* src/main.c (main): Drop force load argument to plugins_init.

	* src/plugin.[ch] (activate_plugin, plugin_db_activate_plugin_list,
	plugin_db_activate_saved_active_plugins, plugins_init): Revert to
	pre 2002-03-08 version. We apologize for the inconvenience. 
	However, error reporting by means of gnumeric_error_error_info